# TC-notes

./: 1.github-notes.txt  README.md
TC/1.cmake_study/: 9.cmake常用指令.txt
TC/1.cmake_study/1.一个简单的起点_1/: Redeme.md  clean.sh
TC/1.cmake_study/1.一个简单的起点_2/: CMakeLists.txt
TC/1.cmake_study/10.动态库与静态库进行链接/: CMakeLists.txt  Makefile
TC/1.cmake_study/2.同一目录下多个文件/: CMakeLists.txt
TC/1.cmake_study/3.同一目录下多个源文件/: CMakeLists.txt  Redeme.md  testFunc1.c
TC/1.cmake_study/4.不目录下多个源文件/: CMakeLists.txt  Makefile
TC/1.cmake_study/5.正规一点的组织结构/: CMakeLists.txt  Makefile  Redeme.md
TC/1.cmake_study/5.正规一点的组织结构/src/: CMakeLists.txt
TC/1.cmake_study/6.正规一点的组织结构/: CMakeLists.txt  Redeme.md
TC/1.cmake_study/7.动态库与静态库的编译控制/: CMakeLists.txt  Makefile
TC/1.cmake_study/8.动态库与静态库进行链接/: CMakeLists.txt  Makefile  Redeme.md
TC/1.cmake_study/8.动态库与静态库进行链接/lib_testFunc/: CMakeLists.txt  testFunc.c
TC/1.cmake_study/8.动态库与静态库进行链接/src/: CMakeLists.txt  main.c
TC/10.tc_svn/.svn/: dir-prop-base  entries
TC/10.tc_svn/binexport/.svn/: entries
TC/10.tc_svn/branches/.svn/: entries
TC/10.tc_svn/svn初始化构建/.svn/: entries
TC/10.tc_svn/svn初始化构建/binexport/.svn/: entries
TC/10.tc_svn/svn初始化构建/branches/.svn/: entries
TC/10.tc_svn/svn初始化构建/tags/.svn/: entries
TC/10.tc_svn/svn初始化构建/trunk/: GLOSSARY
TC/10.tc_svn/svn初始化构建/trunk/.svn/: entries
TC/10.tc_svn/svn初始化构建/trunk/data/.svn/: entries
TC/10.tc_svn/svn初始化构建/trunk/db/.svn/: entries
TC/10.tc_svn/svn初始化构建/trunk/doc/.svn/: entries
TC/10.tc_svn/svn初始化构建/trunk/src/.svn/: entries
TC/10.tc_svn/svn初始化构建/trunk/vendorsrc/.svn/: entries
TC/10.tc_svn/tags/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0-iOS-7.0/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0-iOS-7.0/data/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0-iOS-7.0/db/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0-iOS-7.0/doc/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0-iOS-7.0/src/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0-iOS-7.0/trunk/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0-iOS-7.0/vendorsrc/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0.iOS-7.1/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0.iOS-7.1/data/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0.iOS-7.1/db/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0.iOS-7.1/doc/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0.iOS-7.1/src/.svn/: entries
TC/10.tc_svn/tags/REL-2.0.0.iOS-7.1/vendorsrc/.svn/: entries
TC/10.tc_svn/tags/REL-2.00-iOS-7.0/.svn/: entries
TC/10.tc_svn/tags/REL-2.00-iOS-7.0/data/.svn/: entries
TC/10.tc_svn/tags/REL-2.00-iOS-7.0/db/.svn/: entries
TC/10.tc_svn/tags/REL-2.00-iOS-7.0/doc/.svn/: entries
TC/10.tc_svn/tags/REL-2.00-iOS-7.0/src/.svn/: entries
TC/10.tc_svn/tags/REL-2.00-iOS-7.0/vendorsrc/.svn/: entries
TC/10.tc_svn/trunk/.svn/: dir-prop-base  entries
TC/10.tc_svn/trunk/data/.svn/: entries
TC/10.tc_svn/trunk/db/.svn/: entries
TC/10.tc_svn/trunk/doc/.svn/: entries
TC/10.tc_svn/trunk/doc/FAS/.svn/: entries
TC/10.tc_svn/trunk/doc/MAN/.svn/: entries
TC/10.tc_svn/trunk/doc/RAS/.svn/: entries
TC/10.tc_svn/trunk/doc/RDS/.svn/: entries
TC/10.tc_svn/trunk/doc/RS/.svn/: entries
TC/10.tc_svn/trunk/doc/TS/.svn/: entries
TC/10.tc_svn/trunk/doc/others/.svn/: entries
TC/10.tc_svn/trunk/src/.svn/: entries
TC/10.tc_svn/trunk/src/distribution/.svn/: entries
TC/10.tc_svn/trunk/src/project0/.svn/: entries
TC/10.tc_svn/trunk/src/test_dir/.svn/: entries
TC/10.tc_svn/trunk/vendorsrc/.svn/: dir-prop-base  entries
TC/10.tc_svn/trunk/vendorsrc/TC_testVendor_src/.svn/: entries
TC/11.testor_client/.svn/: entries
TC/11.testor_client/testSVN/.svn/: entries
TC/11.testor_client/testSVN/binexport/.svn/: entries
TC/11.testor_client/testSVN/branches/.svn/: entries
TC/11.testor_client/testSVN/svn初始化构建/.svn/: entries
TC/11.testor_client/testSVN/svn初始化构建/binexport/.svn/: entries
TC/11.testor_client/testSVN/svn初始化构建/branches/.svn/: entries
TC/11.testor_client/testSVN/svn初始化构建/tags/.svn/: entries
TC/11.testor_client/testSVN/svn初始化构建/trunk/.svn/: entries
TC/11.testor_client/testSVN/tags/.svn/: entries
TC/11.testor_client/testSVN/trunk/.svn/: entries
TC/11.testor_client/testSVN/trunk/data/.svn/: entries
TC/11.testor_client/testSVN/trunk/db/.svn/: entries
TC/11.testor_client/testSVN/trunk/doc/.svn/: entries
TC/11.testor_client/testSVN/trunk/src/.svn/: entries
TC/11.testor_client/testSVN/trunk/vendorsrc/.svn/: entries
TC/11.testor_client/testSVN/trunk/vendorsrc/TC_testVendor_src/: README
TC/12.关于svn的学习笔记/: 1.svn学习笔记梳理.txt  2.svn分支操作.txt  3.svn命令.txt  4.svn使用常见基本原则.txt
TC/13.其他文档/: 1.uat与sit环境区别.txt  2.长连接与短连接.txt
TC/2.TC-Project/: 2.函数测试.cpp  3.socket.cpp  4.client.cpp  5.socket.cpp  6.socket.cpp  7.线程池服务器.cpp  test.cpp  thread_pool.c
TC/2.TC-Project/1.Socket/: Socket.cpp
TC/3.TC-Template/: CMakeLists.txt  Makefile  Readme.md
TC/3.TC-Template/Comperssion/: Readme.txt
TC/3.TC-Template/Comperssion/src/: CMakeLists.txt
TC/3.TC-Template/HKocr/: CMakeLists.txt  Readme.txt
TC/3.TC-Template/HKocr/src/: CMakeLists.txt
TC/3.TC-Template/daemon/: CMakeLists.txt  daemon.cpp
TC/4.tinyxml/: Makefile  config_1.xml  config_2.xml  test1.cpp  test2.cpp
TC/6.template/: CREATE_REQ.xml  QUERY2_REQ.xml
TC/7.svn_serve/: help.md
TC/7.svn_serve/1.tc_repertory/conf/: authz  passwd  svnserve.conf
TC/7.svn_serve/1.tc_repertory/db/: rep-cache.db  uuid
TC/7.svn_serve/3.tc_beijin_repertory/conf/: authz  passwd  svnserve.conf
TC/7.svn_serve/3.tc_beijin_repertory/db/: rep-cache.db  uuid
TC/8.wyl_client/.svn/: entries
TC/8.wyl_client/testSVN/.svn/: entries
TC/8.wyl_client/testSVN/binexport/.svn/: entries
TC/8.wyl_client/testSVN/branches/.svn/: entries
TC/8.wyl_client/testSVN/tags/.svn/: entries
TC/8.wyl_client/testSVN/trunk/.svn/: entries
TC/9.kfz_client/.svn/: entries
TC/9.kfz_client/testSVN/.svn/: entries
TC/9.kfz_client/testSVN/.svn/text-base/: intro.svn-base
TC/9.kfz_client/testSVN/binexport/.svn/: entries
TC/9.kfz_client/testSVN/branches/.svn/: entries
TC/9.kfz_client/testSVN/tags/.svn/: entries
TC/9.kfz_client/testSVN/trunk/.svn/: entries
(+363 files in other folders)
